--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -23,7 +23,7 @@ jobs:
     - name: SSH into EC2 instance
       uses: appleboy/ssh-action@master
       with:
-        host: ${{ secrets.REMOTE_SERVER_HOST }}
+        host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_SERVER_USERNAME }}
         key: ${{ secrets.REMOTE_SERVER_SSH_KEY }}
         port: ${{ secrets.REMOTE_SERVER_PORT }}
