--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,8 +29,8 @@ jobs:
         port: ${{ secrets.REMOTE_SERVER_PORT }}
         script: |
           cd /opt/application
-          git pull origin main
-          docker build -t my-flask-app .
-          docker stop my-flask-app || true
-          docker rm my-flask-app || true
-          docker run -d --name my-flask-app -p 80:80 my-flask-app:latest
+          sudo git pull origin main
+          sudo docker build -t my-flask-app .
+          sudo docker stop my-flask-app || true
+          sudo docker rm my-flask-app || true
+          sudo docker run -d --name my-flask-app -p 80:80 my-flask-app:latest
