--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,7 +30,7 @@ jobs:
         script: |
           cd /opt/application
           sudo git remote -v
-          sudo git remote remove master
+          sudo git remote remove 
           sudo git remote add origin /opt/application
           sudo git pull origin main
           sudo docker build -t my-flask-app .
