--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,10 +29,7 @@ jobs:
         port: ${{ secrets.REMOTE_SERVER_PORT }}
         script: |
           cd /opt/application
-          sudo git remote -v
-          sudo git remote remove 
-          sudo git remote add origin /opt/application
-          sudo git pull origin main
+          sudo git clone origin git@github.com:siddhartha-devops/pythonflaskapp.git
           sudo docker build -t my-flask-app .
           sudo docker stop my-flask-app || true
           sudo docker rm my-flask-app || true
