--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Tag Docker image with ECR repository URL
         run: |
-          docker tag python-flask-image:latest 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
+          docker tag pythonflask-repo:python-flask-image 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
 
       - name: Push Docker image to ECR
         run: |
