--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -22,11 +22,11 @@ jobs:
         
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag python-flask-image
+        run: docker build . --file Dockerfile --tag pythonflask-repo
 
       - name: Tag Docker image with ECR repository URL
         run: |
-          docker tag pythonflask-repo:python-flask-image 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
+          docker tag pythonflask-repo:latest 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
 
       - name: Push Docker image to ECR
         run: |
