--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -19,7 +19,6 @@ jobs:
           aws configure set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws configure set default.region ap-south-1  # Replace with your region
           aws ecr get-login-password --region ap-south-1 | docker login --username AWS --password-stdin 166426622475.dkr.ecr.ap-south-1.amazonaws.com
-        
 
       - name: Build the Docker image
         run: docker build . --file Dockerfile --tag pythonflask-repo
@@ -31,6 +30,20 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker push 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
+          
+  notify:
+    runs-on: ubuntu-latest
+    needs: build
+    if: failure()
+
+    steps:
+      - name: Notify failure to Slack
+        uses: slack/webhook-action@v2
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+        with:
+          payload: '{"text": "Workflow failed in job ${{ github.job }} at step ${{ github.job }} - ${{ github.workflow }}"}'
+
 
     
       
