--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -37,12 +37,12 @@ jobs:
     if: failure()
 
     steps:
-      - name: Notify failure to Slack
-        uses: docker://slack/webhook-action:v2
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
         env:
             SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
         with:
-            payload: '{"text": "Workflow failed in job ${{ github.job }} at step ${{ github.job }} - ${{ github.workflow }}"}'
+            args: '{"text": "Workflow failed in job ${{ github.job }} at step ${{ github.job }} - ${{ github.workflow }}"}'
 
       
 
