--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -40,7 +40,8 @@ jobs:
       - name: Slack Notification
         uses: rtCamp/action-slack-notify@v2
         env:
-            SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+            SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+
         with:
             args: '{"text": "Workflow failed in job ${{ github.job }} at step ${{ github.job }} - ${{ github.workflow }}"}'
 
