--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -30,10 +30,11 @@ jobs:
       - name: Push Docker image to ECR
         run: |
           docker push 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
-          
+
   notify:
     runs-on: ubuntu-latest
     needs: build
+    if: always() # Ensure this job runs regardless of the status of the previous jobs
     steps:
         - name: Notify Slack on success
           if: success()
@@ -58,6 +59,7 @@ jobs:
   
               The job steps were:
               ${{ toJson(job) }}
+
 
       
 
