--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -31,22 +31,15 @@ jobs:
         run: |
           docker push 166426622475.dkr.ecr.ap-south-1.amazonaws.com/pythonflask-repo:latest
 
-      - name: Notify Slack on success
+      - name: Notify Slack on success or failure
         if: always() # Ensure this job runs regardless of the status of the previous jobs
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: your-slack-channel-name  # Replace with your Slack channel name
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}  # Slack webhook URL stored as a secret
-          SLACK_USERNAME: GitHub Actions
-          SLACK_ICON_EMOJI: ":white_check_mark:"  # Custom emoji for success
-          SLACK_MESSAGE: "Workflow passed successfully in ${{ github.workflow }}"
+        run: |
+          if [ $? -eq 0 ]; then
+            SLACK_MESSAGE="Workflow passed successfully in ${{ github.workflow }}"
+            SLACK_ICON_EMOJI=":white_check_mark:"  # Custom emoji for success
+          else
+            SLACK_MESSAGE="Workflow failed in job ${{ github.job }} at step ${{ job.status }} - ${{ github.workflow }}.\nThe job steps were:\n${{ toJson(job) }}"
+            SLACK_ICON_EMOJI=":red_circle:"  # Custom emoji for failure
+          fi
 
-      - name: Notify Slack on failure with step information
-        if: failure()
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: your-slack-channel-name  # Replace with your Slack channel name
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}  # Slack webhook URL stored as a secret
-          SLACK_USERNAME: GitHub Actions
-          SLACK_ICON_EMOJI: ":red_circle:"  # Custom emoji for failure
-          SLACK_MESSAGE: "Workflow failed in job ${{ github.job }} at step ${{ job.status }} - ${{ github.workflow }}.\nThe job steps were:\n${{ toJson(job) }}"
+          curl -X POST -H 'Content-type: application/json' --data "{'channel':'your-slack-channel-name','username':'GitHub Actions','text':'$SLACK_MESSAGE','icon_emoji':'$SLACK_ICON_EMOJI'}" ${{ secrets.SLACK_WEBHOOK_URL }}
