--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -36,6 +36,9 @@ jobs:
         uses: act10ns/slack@v1
         with: 
           status: ${{ job.status }}
-          channel: '#meetups'
-          message: Build ${{ job.status }}
+          channel: '#newrelic'
+          message: |
+            Workflow Name: ${{ github.workflow }}
+            Build status : ${{ job.status }}
+            
         if: always()
